Orange Fixed
The orange was too much; this should fix it.

--- a/AssetManager/Shared/MainLayout.razor.css
+++ b/AssetManager/Shared/MainLayout.razor.css
@@ -10,7 +10,7 @@ main {
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, rgb(0, 51, 102) 0%, #ff9933 70%);
+    background-image: linear-gradient(180deg, rgb(0, 51, 102) 0%, #ff9933 110%);
 }
 
 .top-row {
